--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     bottom: 0;
     right: 0;
     left: 0;
+    z-index: 1;
 }
 
 #modal {
@@ -34,4 +35,19 @@ body {
     left: 0;
     right: 0;
     margin: 0 auto;
+    transition: transform 0.4s;
+    z-index: 2;
+}
+
+#modal > p {
+    margin: 0 0 20px;
+}
+
+#mask.hidden {
+    display: none;
+
+}
+
+#modal.hidden {
+    transform: translate(0, -500px);
 }
